2019-09-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Consolidated the error messages in case of more than one error
	* check_ssl_cert: Fixed a bug where the cypher was not forced by the OCSP checks

2019-08-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (ascii_grep): Removed NULL characters before 'grepping' a file
	* check_ssl_cert (critical): Display the CN in a crical or warning message (if present)
	* check_ssl_cert: merged patch to choose the IP protocol version

2019-08-08  Matteo Corti <matteo@corti.li>

	* check_ssl_cert: Applied patch to support LDAPS
	* check_ssl_cert.1: Formatting and ordering

2019-07-26  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Try to detect if LDAP is not supported

2019-06-02  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Return the filename when using --file by warnings

2019-03-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: added an option to specify a user agent for cURL

2019-02-27  Matteo Corti  <matteo@corti.li>

	* test/unit_tests.sh (testMultipleAltNamesFailTwo): removed outdated tests

2019-02-27  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: better error message in case of wrong intermediate certificate

2019-02-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Better error message in case of OCSP failure

2019-02-08  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Check the readability of the certificate file

2019-02-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: applied patch for the SSLlabs warning

2019-01-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: replaced echo -e with printf

2018-12-24  Matteo Corti  <corti@macmini.home>

	* check_ssl_cert: Better output in case of errors while using SNI

2018-12-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Better help about IMAP IMAPS POP3 and POP3S
	* check_ssl_cert: Support for SNI and SSL Labs

2018-12-11  Matteo Corti  <corti@macmini.home>
