@@ -19,7 +19,7 @@
 ################################################################################
 # Constants
 
-VERSION=1.89.0
+VERSION=1.90.0
 SHORTNAME="SSL_CERT"
 
 VALID_ATTRIBUTES=",startdate,enddate,subject,issuer,serial,modulus,serial,hash,email,ocsp_uri,fingerprint,"
@@ -335,10 +335,12 @@ append_warning_message() {
 # Param
 #   $1 warning message
 warning() {
+    
     remove_temporary_files
 
-    NUMBER_OF_ERRORS=$( echo "${ALL_MSG}" | wc -l )
-    if [ "${NUMBER_OF_ERRORS}" -gt 2 ] ; then
+    NUMBER_OF_ERRORS=$( printf '%b' "${ALL_MSG}" | wc -l )
+    
+    if [ "${NUMBER_OF_ERRORS}" -ge 2 ] ; then
 	printf '%s\nError(s):%b\n' "$1" "${ALL_MSG}"
     else
 	printf '%s\n' "$1"
