@@ -1,3 +1,4 @@
+2019-09-19 Version 1.90.0: Bug fix, did not always print all the detected errors
 2019-08-22 Version 1.89.0: Prints all the errors
 2019-08-09 Version 1.88.0: Add an option to force IPv4 or IPv6
 2019-08-08 Version 1.87.0: LDAPS support
