@@ -1,3 +1,7 @@
+2019-09-19  Matteo Corti  <matteo@corti.li>
+
+	* check_ssl_cert: Fixed a problem in the critical output
+
 2019-09-18  Matteo Corti  <matteo@corti.li>
 
 	* check_ssl_cert: Consolidated the error messages in case of more than one error
